--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ img {
 .header {
   display: flex;
   padding: 32px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
 
   color: aliceblue;
   align-items: center;
